Bug 1648683 - right click menu too big on retina screen, tooltips cut off on non-retina screen r=spohl

Handle backing scale factor changes that happen during initial popup window setup.

Differential Revision: https://phabricator.services.mozilla.com/D85729